fix promo spacing

--- a/GCWeb/css/custom.css
+++ b/GCWeb/css/custom.css
@@ -1,3 +1,11 @@
 .home h2 {
   font-size: 1.2em;
 }
+
+
+@media screen and (max-width: 1200px) {
+
+  .promo {
+  	padding-left: 1em;
+
+}
